--- a/sg-style.css
+++ b/sg-style.css
@@ -1,4 +1,6 @@
-
+.sg-display, .sg-display .row {
+margin-left:0;
+}
 body {
     font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
