--- a/style-guide/less/styleguide.less
+++ b/style-guide/less/styleguide.less
@@ -234,7 +234,7 @@ ul.scroll-menu {
 .sg-brand-info .sg-color-swatch {background: @brand-info;}
 .sg-brand-warning .sg-color-swatch {background: @brand-warning;}
 .sg-brand-danger .sg-color-swatch {background: @brand-danger;}
-
+.sg-brand-unsure .sg-color-swatch {background: @brand-unsure;}
 
 /* Fonts
 ---------------------------------------------------------------------------- */
