--- a/style-guide/less/variables.less
+++ b/style-guide/less/variables.less
@@ -18,6 +18,7 @@
 @brand-info:            #029ACF;
 @brand-warning:         #9B479F;
 @brand-danger:          #D9831F;
+@brand-unsure:          #E9DD00;
 
 
 //== Scaffolding
