--- a/sg-style.css
+++ b/sg-style.css
@@ -1,6 +1,11 @@
 .sg-display, .sg-display .row {
 margin-left:0;
 }
+
+.nopaddingmargin {
+  padding:0 !important;
+  margin:0 0;
+}
 body {
     font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
