--- a/sg-style.css
+++ b/sg-style.css
@@ -1,6 +1,23 @@
 .sg-display, .sg-display .row {
 margin-left:0;
+margin-right: 0;
 }
+
+.btn-primary {
+    color: #fff;
+    background-color: #546677;
+    border-color: #ccc;
+}
+
+.label-default {
+    background-color: #546677;
+}
+
+.btn-group > .btn + .dropdown-toggle {
+    padding-right: 4px;
+    padding-left: 12px;
+}
+
 
 .nopaddingmargin {
   padding:0 !important;
@@ -14,70 +31,13 @@ body {
 button.close {
     color: #f00;
 }
-span.greentext.badge {
-  background-color: #fff;
-}
-span.dis.badge {
-  background-color: #fff;
-  color:#546675;
-}
+
 span.caret {
   color:#546675;
   margin-right:10px;
 }
 
-span.langcode {
-  font-size:0.9em;
-  color:#aaa;
-}
-.tablepadding i.fa.fa-user {
-  font-size:22px;
-  color:#ccc;
-  margin-right:10px;
-}
-form i,
-table i,
-.AutoTags h1:after {
-    color: #546677;
-}
-.left-form.tablepadding {
-  padding-right: 0;
-}
-an p strong {
-    font-size: 18px;
-}
-.tab-pane .fa.fa-question-circle {
-    color: #03A6D7;
-}
 
-p.bg-info,
-.form-group .bg-info {
-    padding: 10px;
-    color: #20718A;
-    margin-bottom: 10px;
-}
-
-p.bg-warning {
-    padding: 10px;
-    font-style: italic;
-}
-.bg-info label {
-    font-weight: 500;
-}
-#tran > div > div:nth-child(30) > p:nth-child(2) > button {
-    margin-bottom: 20px;
-}
-span.infotxt {
-    color: #629BAC;
-    font-weight: 400;
-    margin-left: 10px;
-    font-size: 0.9em;
-    margin-right: 40px;
-}
-p span.infotxt {
-    margin-left: 0;
-
-}
 a:link,
 a:visited {
     color: #546677;
@@ -87,94 +47,13 @@ a:hover {
     color: #03A6D7;
     text-decoration: none;
 }
-.tabs-left {
-    border-right: none;
-}
-.nav-tabs {
-    border-bottom: none;
-}
-/* custom inclusion of right, left and below tabs */
 
-.tabs-right > .nav-tabs {
-    border-bottom: 0;
-}
-.tab-content > .tab-pane,
-.pill-content > .pill-pane {
-    display: none;
-}
-.tab-content > .active,
-.pill-content > .active {
-    display: block;
-}
-h2 span.badge {
+
+.badge {
     background-color: #546677;
     line-height: 0.9em;
 }
-td.inline {
-  display: inline-table;
-  width:80px;
-}
-.panel.panel-side {
-    background-color: #fff !important;
-    border: solid 1px #ddd !important;
-    padding: 8px;
-}
-.tabbable {
-    margin-top: 20px;
-    padding-left: 0 !important;
-}
-.tab-content {
-    padding-left: 20px;
-}
-.tabs-left .col-md-3,
-.tabs-left .col-xs-2,
-.tabs-left .col-md-9,
-.tabs-left .col-xs-9 {
-    padding-right: 0;
-}
-.tab-pane h3 {
-    margin-top: 10px;
-}
-.tabs-left > .nav-tabs > li {
-    float: none;
-}
-.tabs-left > .nav-tabs > li > a {
-    margin-right: 0;
-    margin-bottom: 3px;
-}
-.tabs-left > .nav-tabs {
-    float: left;
-    margin-right: 0;
-    border-right: 1px solid #ddd;
-}
-.tabs-left > .nav-tabs > li > a {
-    margin-right: -1px;
-    -webkit-border-radius: 4px 0 0 4px;
-    -moz-border-radius: 4px 0 0 4px;
-    border-radius: 4px 0 0 4px;
-    font-size: 16px;
-}
-.tabs-left > .nav-tabs > li > a span {
-    vertical-align: text-bottom;
-    padding-left: 4px;
-}
-.tabs-left .nav-tabs li a span.heightfix {
-    vertical-align: 4px;
-}
-.tabs-left > .nav-tabs > li > a > i,
-.tabs-left > .nav-tabs > li > a > svg {
-    font-size: 22px;
-}
-.tabs-left > .nav-tabs > li > a:hover,
-.tabs-left > .nav-tabs > li > a:focus {
-    border-color: #eeeeee #dddddd #eeeeee #eeeeee;
-}
-.tabs-left > .nav-tabs .active > a,
-.tabs-left > .nav-tabs .active > a:hover,
-.tabs-left > .nav-tabs .active > a:focus {
-    border-color: #ddd transparent #ddd #ddd;
-    *border-right-color: #ffffff;
-}
+
 table td {
     font-size: 16px;
 }
@@ -194,22 +73,7 @@ h4 {
     stroke: currentColor;
     fill: currentColor;
 }
-.icon-Icon-zanata {
-    height: 60px;
-    width: 60px;
-}
-.proj-sidebar .panel,
-.proj-sidebar .panel .progress,
-.proj-sidebar .panel p,
-.proj-sidebar .panel h4 {
-    margin-bottom: 0;
-    margin-top: 0;
-}
-.search-box,
-.show-items,
-.pagination {
-    padding: 0;
-}
+
 .panel {
     background-color: #fcfcfc;
 }
@@ -218,37 +82,11 @@ h4 {
     background-color: #546677;
     border-color: #ccc;
 }
-.getinvolved .btn-primary {
-    background-color: #03A6D7;
+
+.progress-bar {
+  background-color:#03A6D7;
 }
-#ddlList1,
-#ddlList2 {
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-.getinvolved .btn-primary:hover,
-.getinvolved .btn-primary:active,
-.getinvolved .btn-primary:focus {
-    background-color: #546677;
-}
-td.prog {
-    border-top: none !important;
-    border-top: none !important;
-}
-td.prog:last-of-type {
-    border-bottom: solid 1px #ddd;
-}
-.proj-sidebar .progress {
-    height: 10px;
-    border-radius: 0px;
-}
+
 .progress-bar-info {
     background-color: #4E9FDD;
 }
@@ -258,15 +96,11 @@ td.prog:last-of-type {
 .progress-bar-warning {
     background-color: #E9DD00;
 }
-.contentx .progress {
-    height: 10px;
-    margin-bottom: 0;
-    overflow: hidden;
-    background-color: #f5f5f5;
-    border-radius: 0px;
-    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+
+.progress-bar-danger {
+    background-color: #FF3B3D;
 }
+
 .btn-primary.active,
 .btn-primary:active {
     background-color: #03A6D7;
@@ -291,41 +125,18 @@ a.btn-primary {
     color: #03A6D7 !important;
     font-weight: 600;
 }
-.button-group {
-    margin: 10px 0;
-}
-.button-group .btn {
-    margin-right: 10px;
-    margin-bottom: 10px;
-}
+
 h1,
 h2,
 h3 {
     color: #03A6D7;
 }
 
-.tab-content ul {
-    list-style-type: none;
-}
-.left-form {
-    padding-left: 0;
-    padding-right: 30px;
-}
+
 .panel-body {
     padding: 10px;
 }
 
-.show-items {
-  clear:both;
-}
-.dropdown {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-p.nomarginbottom {
-    margin-bottom: 0;
-    margin-top: 10px;
-}
 .dropdown-menu>li>a {
     color: #546677;
 }
@@ -338,45 +149,7 @@ p.nomarginbottom {
     content: "";
     display: block;
 }
-/*RECENT ACTIVITY */
 
-.activity .panel-body {
-    margin-left: 10px;
-    margin-right: 10px;
-}
-.activity ul li {
-    display: inline-block;
-}
-.update i {
-    margin-right: 5px;
-    color: #03A6D7;
-}
-.update p i {
-    font-size: 22px;
-    vertical-align: text-bottom;
-}
-.update {
-    margin-bottom: 20px;
-}
-.update li:not(:first-child) {
-    margin-left: 10px;
-}
-.update:not(:first-child) {
-    border-top: 1px solid #ddd;
-    margin-top: 10px;
-    padding-top: 20px;
-}
-.update:first-child {
-    padding-top: 10px;
-}
-/*MAINTAINERS PANEL*/
-
-.maintainers {
-    margin-top: 20px;
-}
-.maintainers ul {
-    padding-left: 0px;
-}
 .pagination {
     margin: 0 0;
 }
@@ -407,11 +180,7 @@ thead tr th:not(:first-child) {
 .toolbar .page-count {
     padding-bottom: 30px;
 }
-.maintainers ul li {
-    list-style-type: none;
-    margin-left: 0;
-    vertical-align: middle;
-}
+
 img.avatar {
     max-height: 40px;
     max-width: 40px;
@@ -419,49 +188,9 @@ img.avatar {
 table img.avatar {
     margin-right: 10px;
 }
-.maintainers .row {
-    padding-left: 10px;
-}
+
 .btn-primary i {
     color: #fff
-}
-.maintainers .row .col-xs-2,
-.maintainers .row .col-lg-3 {
-    padding: 0;
-}
-.more {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
-}
-.more ul {
-    list-style-type: none;
-    font-size: 1.6em;
-    padding-bottom: 20px;
-    padding-left: 0;
-    margin-top: 40px;
-    line-height: 2em;
-}
-.more .page {
-    padding-left: 0;
-}
-.lang {
-    margin-top: 30px;
-}
-span.greentext {
-    color: #62C876;
-}
-span.transl-text {
-    color: #62C876;
-    font-size: 1.3em;
-}
-.more .page select.form-control {
-    margin-bottom: 20px;
-}
-.maintainers .row .col-lg-9 {
-    margin-top: 8px;
-    padding: 0;
 }
 .table>tbody>tr>td {
     vertical-align: middle;
@@ -478,13 +207,6 @@ span.transl-text {
 }
 /* PROJECT SIDEBAR */
 
-.projmenu ul li a.btn-default.active {
-    background-color: #03A6D7;
-    color: #fff;
-}
-.left-form.toolbar {
-  padding-right: 0;
-}
 .btn-default.focus,
 .btn-default:focus,
 .btn-default:hover,
@@ -492,275 +214,4 @@ span.transl-text {
 .btn-default:focus i,
 .btn-default:hover i {
     color: #03A6D7;
-}
-.projmenu ul li a.btn-default.active i {
-    color: #fff;
-}
-.projmenu ul li a.btn-default.active .badge {
-    color: #546677;
-    background-color: #fff;
-    font-weight: 600;
-}
-.proj-sidebar ul li {
-    line-height: 2em;
-}
-.proj-sidebar {
-    background-color: #fcfcfc;
-    height: inherit;
-}
-.btn-default .badge {
-    background-color: #54667a;
-    margin-left: 10px;
-}
-.proj-sidebar ul li a {
-    vertical-align: bottom;
-    font-size: 16px;
-}
-.proj-sidebar ul {
-    font-weight: 600;
-}
-.proj-sidebar ul li i,
-.proj-sidebar p i {
-    font-size: 22px;
-    color: #54667a;
-    vertical-align: text-top;
-    margin-right: 10px;
-}
-#version i {
-    color: #03A6D7;
-    margin-right: 10px;
-}
-#expandsidebar a:focus,
-a:hover {
-    text-decoration: none !important;
-}
-/* ZANATA SIDEBAR */
-
-.col-centered {
-    top: 0;
-}
-ul.col-centered {
-    float: none;
-}
-.z-sidebar .col-centered ul li span {
-    word-wrap: break-word;
-}
-.z-sidebar {
-    background-color: #03A6D7;
-    font-weight: 300;
-}
-.z-sidebar i {
-    font-size: 22px;
-}
-.z-sidebar ul,
-.proj-sidebar ul {
-    list-style-type: none;
-    padding-left: 0;
-}
-.z-sidebar a:focus,
-.z-sidebar a:active,
-.z-sidebar a:hover {
-    background-color: #546677;
-    color: #fff;
-}
-.z-sidebar li.active,
-.z-sidebar li.active i,
-.z-sidebar li.active span {
-    background-color: #546677;
-    color: #fff;
-}
-.z-sidebar ul {
-    margin-bottom: 0;
-}
-.z-sidebar ul li.logo a {
-    padding-top: 0;
-}
-.z-sidebar ul li.logo a:hover {
-    background-color: transparent;
-}
-.z-sidebar ul li a {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    color: #fff;
-    color: #fff;
-    display: block;
-    text-align: center;
-}
-/*VERSIONS PANEL*/
-
-.versions .table thead {
-    display: none;
-    visibility: hidden;
-    height: 0;
-}
-.versions .panel-body {
-    padding-top: 0;
-}
-.versions .panel-heading .pull-right {
-    font-size: 0.9em;
-    color: #333;
-}
-.versions .panel-body,
-.stats .panel-body {
-    padding: 0;
-}
-.versions a {
-    font-size: 18px;
-}
-.versions .panel-body a {
-    margin-left: 10px;
-}
-.versions .panel-heading {
-    border-bottom: none;
-}
-.versions .panel-body,
-.maintainers .panel-body {
-    padding-bottom: 0;
-}
-.versions .table {
-    margin-bottom: 0 !important;
-}
-.about .panel-body p:nth-child(2),
-.versions .table thead th:nth-child(2),
-.versions .table tbody td:nth-child(2) {
-    text-align: right;
-}
-/* GET INVOLVED PANEL */
-
-.getinvolved .btn {
-    font-size: 14px;
-    font-weight: 600;
-}
-
-/* CONTENT */
-
-.contentx {
-    background-color: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-size: 16px;
-}
-/***** MEDIA QUERIES *****/
-
-@media (max-width: 767px) {
-    .AutoTags h1 {
-        padding: 7px 15px 7px 35px;
-        display: inline-block;
-        width: 100%;
-        position: relative;
-        text-decoration: none;
-    }
-    .AutoTags .collapsed h1:after {
-        font-family: "FontAwesome";
-        font-size: 12px;
-        font-weight: 400;
-        left: 10px;
-        line-height: 1;
-        margin-top: -5px;
-        position: absolute;
-        top: 50%;
-        content: "\f067";
-    }
-    #expandsidebar {
-        padding: 10px;
-    }
-    .contentx {
-        min-height: 300px;
-    }
-    .projmenu ul {
-        display: inline-flex;
-    }
-    .maintainers ul li a {
-        font-size: 16px;
-        word-break: keep-all;
-    }
-    .projmenu ul li {
-        padding-right: 10px;
-    }
-    .AutoTags h1:after {
-        font-family: "FontAwesome";
-        font-size: 12px;
-        font-weight: 400;
-        left: 10px;
-        line-height: 1;
-        margin-top: -5px;
-        position: absolute;
-        top: 50%;
-        content: "\f068";
-    }
-    .collapsing {
-        transition: height 0.8s;
-    }
-    .proj-sidebar {
-        border-bottom: 1px solid #ddd;
-        box-shadow: none;
-        padding: 0;
-    }
-    .z-sidebar ul li {
-        display: inline-block;
-        padding: 1em;
-    }
-    .z-sidebar .col-centered ul {
-        width: 320px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .projmenu ul li a.btn-default {
-        padding: 8px;
-    }
-}
-@media (min-width: 768px) {
-    .projmenu ul li a.btn-default {
-        background-color: transparent;
-        border: none;
-        font-weight: 600;
-    }
-
-
-    .projmenu ul li a.btn-default.active {
-        width: 110%;
-        text-align: left;
-    }
-    .proj-sidebar .collapse {
-        overflow: visible;
-        display: block !important;
-    }
-    .proj-sidebar {
-        border-right: solid 1px #ddd;
-    }
-    .projmenu ul {
-        display: block;
-    }
-    .row-height {
-        display: table;
-        table-layout: fixed;
-        height: 100%;
-        width: 100%;
-    }
-    .col-height {
-        height: 100%;
-        display: table-cell;
-        float: none;
-    }
-    .z-sidebar,
-    .proj-sidebar {
-        padding-top: 10px;
-    }
-    h1 {
-        margin-top: 0;
-    }
-}
-@media (max-width: 991px) {
-    .stats .table > tbody > tr > td {
-        padding: 0;
-    }
-}
-@media (min-width: 992px) {
-    .maintainers ul li a {
-        word-break: keep-all;
-        margin-left: 10px;
-    }
-    .show-items {
-      clear:none !important;
-    }
 }
