--- a/sg-style.css
+++ b/sg-style.css
@@ -1,7 +1,24 @@
+/* FORMATTING FOR STYLE GUIDE */
 .sg-display, .sg-display .row {
 margin-left:0;
 margin-right: 0;
 }
+
+.page-header.titles {
+background-color:#333;
+color:#fff;
+padding: 8px;
+}
+.page-header.titles small {
+color:#ccc;
+}
+
+.nopaddingmargin {
+  padding:0 !important;
+  margin:0 0;
+}
+
+/* ------------- */
 
 .btn-primary {
     color: #fff;
@@ -19,10 +36,6 @@ margin-right: 0;
 }
 
 
-.nopaddingmargin {
-  padding:0 !important;
-  margin:0 0;
-}
 body {
     font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
@@ -130,11 +143,6 @@ h1,
 h2,
 h3 {
     color: #03A6D7;
-}
-
-
-.panel-body {
-    padding: 10px;
 }
 
 .dropdown-menu>li>a {
