--- a/sg-style.css
+++ b/sg-style.css
@@ -1,22 +1,10 @@
-
-.sg-display, .sg-display .row {
-margin-left:0;
-margin-right: 0;
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+    z-index: 2;
+    color: #fff;
+    background-color: #546677;
+    border-color: #546677;
 }
 
-.page-header.titles {
-background-color:#333;
-color:#fff;
-padding: 8px;
-}
-.page-header.titles small {
-color:#ccc;
-}
-
-.nopaddingmargin {
-  padding:0 !important;
-  margin:0 0;
-}
 
 .form-control{
   height: auto;
