--- a/less/variables.less
+++ b/less/variables.less
@@ -13,7 +13,7 @@
 @gray-light:             #808080;   // #999
 @gray-lighter:           #ddd; // #eee
 
-@brand-primary:         #546677;
+@brand-primary:         #03A6D7;
 @brand-success:         #469408;
 @brand-info:            #029ACF;
 @brand-warning:         #9B479F;
