--- a/sg-style.css
+++ b/sg-style.css
@@ -58,6 +58,10 @@ h4 {
   background-color: #fcfcfc;
 }
 
+.text-primary {
+  color:#546677;
+}
+
 .btn-primary {
   color: #fff;
   border-color: #ccc;
