primary label added, background colour fixed

--- a/less/variables.less
+++ b/less/variables.less
@@ -14,6 +14,7 @@
 @gray-lighter:           #ddd; // #eee
 
 @brand-primary:         #03A6D7;
+@brand-primary-fix:     #546677;
 @brand-success:         #469408;
 @brand-info:            #029ACF;
 @brand-warning:         #9B479F;
@@ -538,7 +539,7 @@
 //** Default label background color
 @label-default-bg:            @btn-default-bg;
 //** Primary label background color
-@label-primary-bg:            @brand-primary;
+@label-primary-bg:            @brand-primary-fix;
 //** Success label background color
 @label-success-bg:            @brand-success;
 //** Info label background color
